--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,12 @@
     "incremental": true,
     "baseUrl": "src",
     "paths": {
-      "@componnets/*": ["components/*"],
+      "@components/*": ["components/*"],
       "@styles/*": ["styles/*"],
       "@pages/*": ["pages/*"],
-      "@common/*": ["common/*"]
+      "@common/*": ["common/*"],
+      "@layout/*": ["layout/*"],
+      "@assets/*": ["assets/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/common/Modal.jsx", "src/components/Header.jsx"],
