--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "js-cookie": "^3.0.5",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
