--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
+    "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "next": "13.4.2",
+    "npm": "^10.1.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
