--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,14 +5,7 @@
     "es6": true,
     "amd": true
   },
-  "extends": [
-    "next",
-    "next/core-web-vitals",
-    "prettier",
-    "eslint:recommended",
-    "plugin: jsx-a11y/recommended",
-    "plugin:prettier/recommended"
-  ],
+  "extends": ["next", "next/core-web-vitals", "prettier", "eslint:recommended", "plugin:jsx-a11y/recommended", "plugin:prettier/recommended"],
   "settings": {
     "next": {
       "rootDir": "packages/my-app/"
